--- a/ansible/strongswan-install.yml
+++ b/ansible/strongswan-install.yml
@@ -22,6 +22,7 @@
     raw: >
       test -e /usr/bin/python ||
       (
+        (test -e /usr/bin/python3 && ln -s /usr/bin/python3 /usr/bin/python) || 
         (test -e /usr/bin/apt-get && (apt-get -y update && apt-get install -y python)) ||
         (test -e /usr/bin/yum && (yum makecache fast && yum install -y python))
       )
